добавляет настройку npm

--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,6 +1,6 @@
 <header class="main-header">
   <a class="main-header__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
-    <img src="icons/logo-mobile.svg" width="86" height="35" alt="Логотип Мишки.">
+    <img src="./img/logo-mobile.svg" width="86" height="35" alt="Логотип Мишки.">
   </a>
   <nav class="main-nav">
     <button class="main-nav__toggle" type="button">
