--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,3 +1,8 @@
 .button {
-  background: transparent;
+  font-family: var(--main-font);
+  width: fit-content;
+
+  &--size_wide {
+    width: 100%;
+  }
 }
