--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,21 @@
 @import "./global/global.scss";
+@import "./global/fonts.scss";
+@import "./global/variables.scss";
+@import "./blocks/page.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/header-logo.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/site-list.scss";
+@import "./blocks/site-sublist.scss";
+@import "./blocks/user-list.scss";
+@import "./blocks/heading.scss";
 @import "./blocks/button.scss";
+@import "./blocks/products.scss";
+@import "./blocks/product-list.scss";
+@import "./blocks/featured.scss";
+@import "./blocks/product-card.scss";
+@import "./blocks/card-label.scss";
+
 
 body {
   background: #ffffff;
