--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,8 +1,8 @@
-<header class="main-header">
-  <a class="main-header__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
+<header class="main-header page__centerer">
+  <a class="header-logo main-header__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
     <img src="./img/logo-mobile.svg" width="86" height="35" alt="Логотип Мишки.">
   </a>
-  <nav class="main-nav">
+  <nav class="main-nav main-header__nav">
     <button class="main-nav__toggle" type="button">
       <span class="visually-hidden">Открыть меню</span>
     </button>
