--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -10,3 +10,9 @@
   position: fixed;
   transform: scale(0);
 }
+
+.line-decor__bottom {
+  background-image: url("../../img/zigzag-line.svg");
+  background-position: bottom;
+  background-repeat: repeat-x;
+}
