--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,15 @@
 @import "./blocks/reviews.scss";
 @import "./blocks/quote.scss";
 @import "./blocks/button-reviews.scss";
+@import "./blocks/author.scss";
+@import "./blocks/author-id.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/main-footer.scss";
+@import "./blocks/copyright.scss";
+@import "./blocks/main-modal.scss";
+@import "./blocks/modal-form.scss";
+@import "./blocks/basket-button.scss";
+@import "./blocks/button-size.scss";
 
 body {
   background: #ffffff;
