--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,5 +1,5 @@
 <footer class="main-footer">
-  <div class="main-footer__container">
+  <div class="page__centerer">
     <a class="main-footer__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
       <img src="icons/logo-footer.svg" width="102" height="34" alt="Логотип Мишки.">
     </a>
