--- a/source/templates/modal.twig
+++ b/source/templates/modal.twig
@@ -1,7 +1,7 @@
 <div class="main-modal main-modal--close">
-  <div class="main-modal__container">
+  <div class="page__centerer">
     <form class="main-modal__form modal-form" action="https://echo.htmlacademy.ru/" method="post">
-      <h3 class="modal-form__title">Добавить в корзину</h3>
+      <h3 class="modal-form__title heading--level_2">Добавить в корзину</h3>
       <div class="modal-form__buttons basket-button">
         <fieldset class="basket-button__field">
           <legend class="basket-button__title">Выберите размер:</legend>
@@ -21,7 +21,7 @@
           </ul>
         </fieldset>
       </div>
-      <button class="main-modal__button button-submit" type="submit">Добавить</button>
+      <button class="modal-form__submit button" type="submit">Добавить</button>
     </form>
   </div>
 </div>
