--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,11 +25,25 @@
 @import "./blocks/author-id.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/main-footer.scss";
+@import "./blocks/social.scss";
 @import "./blocks/copyright.scss";
 @import "./blocks/main-modal.scss";
 @import "./blocks/modal-form.scss";
 @import "./blocks/basket-button.scss";
 @import "./blocks/button-size.scss";
+@import "./blocks/header-form.scss";
+@import "./blocks/order.scss";
+@import "./blocks/form-order.scss";
+@import "./blocks/fieldset-border.scss";
+@import "./blocks/label-form.scss";
+@import "./blocks/text-form.scss";
+@import "./blocks/type-form.scss";
+@import "./blocks/color-form.scss";
+@import "./blocks/required-note.scss";
+@import "./blocks/catalog-page.scss";
+@import "./blocks/catalog-title.scss";
+@import "./blocks/catalog-products.scss";
+@import "./blocks/card-product.scss";
 
 body {
   background: #ffffff;
