--- a/source/templates/modal.twig
+++ b/source/templates/modal.twig
@@ -3,7 +3,7 @@
     <form class="main-modal__form modal-form" action="https://echo.htmlacademy.ru/" method="post">
       <h3 class="modal-form__title heading--level_2">Добавить в корзину</h3>
       <div class="modal-form__buttons basket-button">
-        <fieldset class="basket-button__field">
+        <fieldset class="basket-button__field fieldset-border">
           <legend class="basket-button__title">Выберите размер:</legend>
           <ul class="basket-button__list">
             <li class="basket-button__item basket-button__item--size_s basket-button__item--current button-size">
