--- a/source/templates/modal.twig
+++ b/source/templates/modal.twig
@@ -1,7 +1,7 @@
 <div class="main-modal main-modal--close">
   <div class="page__centerer">
     <form class="main-modal__form modal-form" action="https://echo.htmlacademy.ru/" method="post">
-      <h3 class="modal-form__title heading--level_2">Добавить в корзину</h3>
+      <h2 class="modal-form__title heading heading--level_2">Добавить в корзину</h2>
       <div class="modal-form__buttons basket-button">
         <fieldset class="basket-button__field fieldset-border">
           <legend class="basket-button__title">Выберите размер:</legend>
