--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,11 +1,21 @@
 .page {
   font-family: var(--main-font);
   height: 100%;
-  margin: 0;
   background: var(--main-color);
 }
 
 
 .page__centerer {
   margin-inline: 30px;
+}
+
+.visually-hidden {
+  position: fixed;
+  transform: scale(0);
+}
+
+.line-decor--bottom {
+  background-image: url("../../img/zigzag-line.svg");
+  background-position: bottom;
+  background-repeat: repeat-x;
 }
