--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
-@import "./global/global.scss";
+@import "./global/media.scss";
 @import "./global/fonts.scss";
 @import "./global/variables.scss";
+@import "./global/global.scss";
 @import "./blocks/page.scss";
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/line-decor.scss";
@@ -44,10 +45,14 @@
 @import "./blocks/required-note.scss";
 @import "./blocks/catalog-page.scss";
 @import "./blocks/catalog-title.scss";
+@import "./blocks/cards-wrapper.scss";
 @import "./blocks/catalog-products.scss";
 @import "./blocks/card-product.scss";
 @import "./blocks/description-list.scss";
+@import "./blocks/description-wrapper.scss";
 @import "./blocks/price-of-item.scss";
+@import "./blocks/production.scss";
+@import "./blocks/production-container.scss";
 @import "./blocks/video-description.scss";
 
 body {
