--- a/source/sass/blocks/heading.scss
+++ b/source/sass/blocks/heading.scss
@@ -2,6 +2,17 @@
   font-size: 27px;
   line-height: 30px;
   font-weight: 700;
+  text-align: center;
+
+  @media (--not-mobile) {
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  @media (--desktop) {
+    font-size: 53px;
+    line-height: 57px;
+  }
 
   &--level_2 {
     font-size: 25px;
