--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,7 +1,7 @@
 <footer class="main-footer">
-  <div class="page__centerer">
+  <div class="page__centerer main-footer__container">
     <a class="main-footer__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
-      <img src="icons/logo-footer.svg" width="102" height="34" alt="Логотип Мишки.">
+      <img src="../img/logo-footer.svg" width="102" height="34" alt="Логотип Мишки.">
     </a>
     <div class="main-footer__social social">
       <ul class="social__list">
