добавляем footer сетку

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -2,4 +2,34 @@
   font-size: 19px;
   line-height: 18px;
   font-weight: 700;
+  display: flex;
+  align-items: center;
+  padding: 22px 0 23px;
+}
+
+.copyright__link {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 27px 34px;
+  margin-left: 27px;
+  --icon: url("../../img/htmlacademy-mob.svg");
+  cursor: pointer;
+
+  &:hover::after {
+    background: #46c1ae;
+  }
+
+  &:active::after {
+    background: rgba(70, 193, 174, 0.3);
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    width: 27px;
+    height: 34px;
+    background: #63d1bb;
+    mask: var(--icon);
+    box-sizing: border-box;
+  }
 }
