--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,7 +1,7 @@
 <footer class="main-footer">
-  <div class="page__centerer main-footer__container">
+  <div class="main-footer__container">
     <a class="main-footer__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
-      <img src="../img/logo-footer.svg" width="102" height="34" alt="Логотип Мишки.">
+      <span class="visually-hidden">Логотип Мишки</span>
     </a>
     <div class="main-footer__social social">
       <ul class="social__list">
@@ -23,7 +23,7 @@
       </ul>
     </div>
     <div class="main-footer__copyright copyright">
-      <b class="copyright__text">Разработано:</b>
+      <b class="copyright__text">Разработано</b>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="visually-hidden">Логотип HTML Academy</span>
       </a>
