--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -5,10 +5,41 @@
 .main-footer__container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 0 50px 0;
+
+  @media (--not-mobile) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .main-footer__logo {
   display: none;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 102px 34px;
+  --icon: url("../../img/logo-footer.svg");
+  cursor: pointer;
+
+  &:hover::after {
+    background: #46c1ae;
+  }
+
+  &:active::after {
+    background: rgba(70, 193, 174, 0.3);
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    width: 102px;
+    height: 34px;
+    background: #000000;
+    mask: var(--icon);
+    box-sizing: border-box;
+  }
+
 
   @media (--not-mobile) {
     display: block;
