--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -19,4 +19,13 @@
   &--size_wide {
     width: 100%;
   }
+
+  &--basket {
+    color: #ffffff;
+    background-color: #63d1bb;
+    font-size: 17px;
+    line-height: 16px;
+    border: none;
+    padding: 18px 0;
+  }
 }
