--- a/source/templates/modal.twig
+++ b/source/templates/modal.twig
@@ -1,27 +1,27 @@
 <div class="main-modal main-modal--close">
-  <div class="page__centerer">
+  <div class="main-modal__centerer">
     <form class="main-modal__form modal-form" action="https://echo.htmlacademy.ru/" method="post">
       <h2 class="modal-form__title heading heading--level_2">Добавить в корзину</h2>
       <div class="modal-form__buttons basket-button">
         <fieldset class="basket-button__field fieldset-border">
           <legend class="basket-button__title">Выберите размер:</legend>
           <ul class="basket-button__list">
-            <li class="basket-button__item basket-button__item--size_s basket-button__item--current button-size">
-              <label class="button-size__label" for="basket-button--size_s">s</label>
-              <input class="button-size__control" type="radio" name="basket-size" value="size-s" id="basket-button--size_s">
+            <li class="basket-button__item  button-size">
+              <label class="button-size__label button-size__label--current" for="basket-button--size_s">s</label>
+              <input class="button-size__control visually-hidden" type="radio" name="basket-size" value="size-s" id="basket-button--size_s" checked>
             </li>
             <li class="basket-button__item basket-button__item--size_m button-size">
               <label class="button-size__label" for="basket-button--size_m">m</label>
-              <input class="button-size__control" type="radio" name="basket-size" value="size-m" id="basket-button--size_m">
+              <input class="button-size__control visually-hidden" type="radio" name="basket-size" value="size-m" id="basket-button--size_m">
             </li>
-            <li class="basket-button__item basket-button__item--size_l button-size">
+            <li class="basket-button__item button-size">
               <label class="button-size__label" for="basket-button--size_l">l</label>
-              <input class="button-size__control" type="radio" name="basket-size" value="size-l" id="basket-button--size_l">
+              <input class="button-size__control visually-hidden" type="radio" name="basket-size" value="size-l" id="basket-button--size_l">
             </li>
           </ul>
         </fieldset>
       </div>
-      <button class="modal-form__submit button" type="submit">Добавить</button>
+      <button class="modal-form__submit button button--basket button--size_wide" type="submit">Добавить</button>
     </form>
   </div>
 </div>
