--- a/source/sass/blocks/button-size.scss
+++ b/source/sass/blocks/button-size.scss
@@ -1,7 +1,21 @@
-.button-size__label {
+.button-size {
   font-size: 17px;
   line-height: 16px;
   font-weight: 700;
   text-transform: uppercase;
-  text-align: center;
+  height: 52px;
+  margin: 0;
+  border: 2px solid rgba(68, 68, 68, 0.1);
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @media (--mobile) {
+    min-width: 82px;
+  }
+}
+
+.button-size__label {
+  cursor: pointer;
 }
