--- a/source/sass/blocks/main-modal.scss
+++ b/source/sass/blocks/main-modal.scss
@@ -1,3 +1,21 @@
 .main-modal {
   background: var(--main-color);
 }
+
+.main-modal__centerer {
+  margin: 0 auto;
+  padding: 35px 108px 46px;
+  max-width: 566px;
+  box-sizing: border-box;
+  border: 1px solid #c6c6c6;
+  box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+
+  @media (--mobile) {
+    padding: 28px 30px 46px;
+    min-width: 320px;
+  }
+}
+
+.main-modal__form {
+  margin: 0;
+}
