--- a/source/sass/blocks/type-form.scss
+++ b/source/sass/blocks/type-form.scss
@@ -1,10 +1,14 @@
 .type-form__list {
   list-style-type: none;
   margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .type-form__title {
-  margin-bottom: 35px;
+  @media (--mobile) {
+    margin-bottom: 35px;
+  }
 }
 
 .type-form__item:not(:last-child) {
