--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,10 +38,13 @@
 @import "./blocks/order.scss";
 @import "./blocks/form-order.scss";
 @import "./blocks/fieldset-border.scss";
+@import "./blocks/fieldset-grid.scss";
+@import "./blocks/user-form.scss";
 @import "./blocks/label-form.scss";
 @import "./blocks/text-form.scss";
 @import "./blocks/type-form.scss";
 @import "./blocks/color-form.scss";
+@import "./blocks/contact-details.scss";
 @import "./blocks/required-note.scss";
 @import "./blocks/catalog-page.scss";
 @import "./blocks/catalog-title.scss";
