--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -1,21 +1,31 @@
 .products-list {
   list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+
+  @media (--not-mobile) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
-.products-list__link {
-  color: #ffffff;
+.products-list__item {
   font-size: 19px;
   line-height: 24px;
   font-weight: 700;
   padding: 24px 36px 31px 30px;
-  display: block;
+
+  &--icon_interior {
+    background: var(--accent-color, #63d1bb);
+  }
+
+  &--icon_toy {
+    background: var(--accent-color-dark, #56c3b2);
+  }
+}
+
+.products-list__link {
+  color: #ffffff;
   text-decoration: none;
-}
-
-.products-list__link--icon_interior {
-  background: var(--accent-color, #63d1bb);
-}
-
-.products-list__link--icon_toy {
-  background: var(--accent-color-dark, #56c3b2);
 }
