--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -4,14 +4,74 @@
   font-size: 15px;
   line-height: 24px;
   font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  max-width: 1050px;
+
+  @media (--not-mobile) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
+  }
+
+  @media (--desktop) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
+  }
 }
 
 .product__title {
   margin-bottom: 3.5px;
+
+  @media (--not-mobile) {
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+  }
+
+  @media (--desktop) {
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
+    z-index: 2;
+  }
 }
 
 .product__label {
   margin-bottom: 17.5px;
+
+  @media (--not-mobile) {
+    grid-column: 4 / -1;
+    grid-row: 1 / 2;
+  }
+
+  @media (--desktop) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+}
+
+.product__description-container {
+  @media (--not-mobile) {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }
+
+  @media (--desktop) {
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+  }
+}
+
+.product__price-container {
+  @media (--not-mobile) {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+  }
+
+  @media (--desktop) {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
 }
 
 .product__description {
@@ -28,7 +88,18 @@
 .product__image {
   margin: 0;
   margin-bottom: 25.5px;
+
+  @media (--not-mobile) {
+    grid-column: 3 / -1;
+    grid-row: 2 / 4;
+  }
+
+  @media (--desktop) {
+    grid-column: 4 / 7;
+    grid-row: 1 / 4;
+  }
 }
+
 
 .product__price {
   margin: 0;
