--- a/source/sass/blocks/line-decor.scss
+++ b/source/sass/blocks/line-decor.scss
@@ -2,4 +2,5 @@
   background-image: url("../../img/zigzag-line.svg");
   background-position: bottom;
   background-repeat: repeat-x;
+  z-index: 2;
 }
