--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,13 +1,54 @@
-.slider {
-  padding: 45px 30px;
+.reviews__container {
+  min-width: 260px;
+  max-width: 1050px;
+
+  @media (--not-mobile) {
+    background: url("../../img/review-mobile.jpg");
+    background-position: top left;
+    background-repeat: no-repeat;
+    z-index: -1;
+    padding: 82px 50px 47px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
+  }
+
+  @media (--desktop) {
+    padding-left: 175px;
+  }
 }
 
 .reviews__title {
   margin: 0;
   margin-bottom: 14px;
+  text-align: start;
+
+  @media (--not-mobile) {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+  }
 }
 
 .reviews__quote {
   margin: 0;
   margin-bottom: 30px;
+
+  @media (--not-mobile) {
+    grid-column: 1 / -1;
+    grid-row: 2 / -1;
+  }
+}
+
+.reviews__slider {
+  @media (--not-mobile) {
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+  }
+}
+
+.reviews__write {
+  @media (--not-mobile) {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+  }
 }
