--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,7 @@
 @import "./blocks/product-specification.scss";
 @import "./blocks/product-price.scss";
 @import "./blocks/advantage.scss";
+@import "./blocks/about.scss";
 @import "./blocks/reviews.scss";
 @import "./blocks/quote.scss";
 @import "./blocks/button-reviews.scss";
