--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,17 +2,52 @@
   font-size: 14px;
   line-height: 30px;
   color: #444444;
+  display: flex;
+  flex-direction: column;
+
+  @media (--not-mobile) {
+    display: grid;
+    grid-template-columns: 50px 1fr 1fr 1fr 1fr 50px;
+    grid-template-rows: auto auto auto auto;
+  }
+}
+
+.contacts__container {
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .contacts__title {
   margin: 0;
   margin-bottom: 28px;
+
+  @media (--not-mobile) {
+    grid-column: 2 / 6;
+    grid-row: 1 / 2;
+  }
 }
 
 .contacts__address {
   margin-bottom: 52px;
+
+  @media (--not-mobile) {
+    grid-column: 2 / 6;
+    grid-row: 2 / 3;
+  }
 }
 
-.contacts__button {
+.contacts__map {
+  @media (--not-mobile) {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+  }
+}
+
+.contacts__button-wrapper {
   margin-bottom: 39px;
+
+  @media (--not-mobile) {
+    grid-column: 3 / 5;
+    grid-row: 4 / 5;
+  }
 }
