--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -15,6 +15,9 @@
 
   @media (--desktop) {
     padding-left: 175px;
+    max-width: 1052px;
+    margin-left: 49px;
+    margin-right: 49px;
   }
 }
 
