--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,11 +1,17 @@
 .site-list {
   list-style-type: none;
   padding: 0;
+
+  @media (--not-mobile) {
+    display: flex;
+    margin: 0;
+  }
 }
 
 .site-list__link {
   font-size: 17px;
   line-height: 24px;
+  font-weight: 700;
   color: #000000;
   text-decoration: none;
 }
