добавляет header grid and fix form

--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -33,8 +33,9 @@
       </li>
       <li class="site-list__item">
         <a class="site-list__link" href="#">Корзина: пока пуста</a>
-        <p class="site-list__description">Бесплатная доставка по России</p>
+
       </li>
     </ul>
   </nav>
+  <p class="main-header__description">Бесплатная доставка по России</p>
 </header>
