--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -6,17 +6,22 @@
   justify-content: center;
 
   @media (--not-mobile) {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: auto auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1050px;
   }
 }
 
-.header-logo {
+.main-header__logo {
   height: 35px;
 
   @media (--not-mobile) {
-    grid-row: 1 / 2;
+    order: 1;
+  }
+
+  @media (--desktop) {
+    order: 2;
   }
 }
 
@@ -45,6 +50,7 @@
   }
 }
 
+.main-header__description,
 .main-header__user,
 .main-header__nav {
   display: none;
@@ -55,19 +61,44 @@
 }
 
 .main-header__nav {
-  @media (--not-mobile) {
-    grid-row: 2 / 3;
+  @media (--tablet) {
+    order: 3;
+    position: absolute;
+    bottom: -50%;
+    left: 30px;
+    background: transparent;
+  }
+
+  @media (--desktop) {
+    order: 1;
   }
 }
 
 .main-header__user {
   @media (--not-mobile) {
-    grid-row: 1 / 2;
+    order: 2;
+  }
+}
+
+.main-header__description {
+  @media (--not-mobile) {
+    order: 4;
+    position: absolute;
+    bottom: -50%;
+    right: 30px;
   }
 }
 
 .main-nav__sublist {
   @media (--not-mobile) {
     display: none;
+  }
+
+  @media (--desktop) {
+    position: absolute;
+    bottom: -50%;
+    left: 30px;
+    background: transparent;
+    display: block;
   }
 }
