--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,10 +1,15 @@
 .about__title {
   text-align: start;
+
+  @media (--desktop) {
+    padding-left: 175px;
+  }
 }
 
 .about__container {
   @media (--desktop) {
     padding-left: 175px;
     padding-right: 175px;
+    max-width: 1050px;
   }
 }
