--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -1,13 +1,13 @@
 .main-footer {
   background: var(--second-color);
-  max-width: 1150px;
 }
 
 .main-footer__container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 50px 0;
+  padding: 0;
+  max-width: 1150px;
 
   @media (--not-mobile) {
     flex-direction: row;
