--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,4 +1,4 @@
-<footer class="main-footer">
+<footer class="main-footer page__centerer">
   <div class="main-footer__container">
     <a class="main-footer__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
       <span class="visually-hidden">Логотип Мишки</span>
