--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,5 +1,5 @@
-<footer class="main-footer page__centerer">
-  <div class="main-footer__container">
+<footer class="main-footer">
+  <div class="main-footer__container page__centerer">
     <a class="main-footer__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
       <span class="visually-hidden">Логотип Мишки</span>
     </a>
