--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,6 +38,7 @@
 @import "./blocks/header-form.scss";
 @import "./blocks/order.scss";
 @import "./blocks/form-order.scss";
+@import "./blocks/info-form.scss";
 @import "./blocks/fieldset-border.scss";
 @import "./blocks/fieldset-grid.scss";
 @import "./blocks/user-form.scss";
