--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -4,19 +4,18 @@
   font-size: 17px;
   line-height: 20px;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  max-width: 1050px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(auto-fit, min-content);
 
-  @media (--not-mobile) {
-    flex-wrap: wrap;
-    flex-direction: row;
+
+  @media (--mobile) {
+    grid-template-columns: 1fr;
   }
 
   @media (--desktop) {
     padding-left: 175px;
     padding-right: 175px;
-    max-width: 1050px;
   }
 }
 
@@ -24,8 +23,10 @@
   margin: 0;
   margin-top: 82px;
 
-  @media (--not-mobile) {
-    width: 50%;
+  @media (--mobile) {
+    &:nth-child(2n+2) {
+      order: 1;
+    }
   }
 
   &:last-child {
