--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -11,6 +11,18 @@
   min-width: 260px;
   max-width: 1050px;
 
+  &--desktop_on {
+    @media (--mobile) {
+      display: contents;
+    }
+
+    &--desktop_off {
+      @media (--desktop) {
+        display: contents;
+      }
+    }
+  }
+
   @media (--not-mobile) {
     margin-inline: 50px;
   }
