--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,13 +8,15 @@
 @import "./blocks/main-header.scss";
 @import "./blocks/header-logo.scss";
 @import "./blocks/main-nav.scss";
+@import "./blocks/user-nav.scss";
+@import "./blocks/nav-container.scss";
 @import "./blocks/site-list.scss";
 @import "./blocks/site-sublist.scss";
 @import "./blocks/user-list.scss";
 @import "./blocks/heading.scss";
 @import "./blocks/button.scss";
 @import "./blocks/products.scss";
-@import "./blocks/product-list.scss";
+@import "./blocks/products-list.scss";
 @import "./blocks/featured.scss";
 @import "./blocks/product.scss";
 @import "./blocks/card-label.scss";
