--- a/source/sass/blocks/products-list.scss
+++ b/source/sass/blocks/products-list.scss
@@ -15,6 +15,7 @@
   line-height: 24px;
   font-weight: 700;
   padding: 24px 36px 31px 30px;
+  min-width: 320px;
 
   &--icon_interior {
     background: var(--accent-color, #63d1bb);
