--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,5 +1,5 @@
 <div class="page__centerer page__centerer--desktop_on">
-<header class="main-header">
+<header class="main-header main-header--nojs main-header--menu_closed ">
   <a class="header-logo main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {%
     endif %}>
     <img src="./img/logo-mobile.svg" width="86" height="35" alt="Логотип Мишки.">
