--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,5 +1,5 @@
 <div class="page__centerer page__centerer--desktop_on">
-<header class="main-header main-header--nojs main-header--menu_closed ">
+<header class="main-header main-header--nojs main-header--menu_closed">
   <a class="header-logo main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {%
     endif %}>
     <img src="./img/logo-mobile.svg" width="86" height="35" alt="Логотип Мишки.">
@@ -7,7 +7,7 @@
   <button class="main-header__toggle" type="button">
     <span class="visually-hidden">Открыть меню</span>
   </button>
-  <div class="nav-container">
+  <div class="main-header__nav-container nav-container">
     <nav class="main-nav main-header__nav">
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
