--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,11 +1,10 @@
 .social {
-  width: 142px;
-  padding: 25px 0 28px;
-
   @media (--mobile) {
     background: url("../../img/footer-divider.svg");
     background-repeat: no-repeat;
     background-position: bottom;
+    width: 142px;
+    padding: 25px 0 28px;
   }
 }
 
@@ -15,6 +14,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   row-gap: 20px;
   padding: 0;
+  margin: 0;
 }
 
 .social__item {
