--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -4,6 +4,7 @@
   color: #444444;
   display: flex;
   flex-direction: column;
+  min-width: 320px;
 
   @media (--not-mobile) {
     display: grid;
