--- a/source/sass/blocks/button-size.scss
+++ b/source/sass/blocks/button-size.scss
@@ -21,9 +21,13 @@
     outline-offset: -1px;
   }
 
-  &:active,
-  &:focus-within {
+  &:active {
     outline: 2px solid #62d1ba;
     outline-offset: -1px;
   }
+}
+
+.button-size__control:checked + .button-size__label {
+  outline: 2px solid #62d1ba;
+  outline-offset: -1px;
 }
