--- a/source/templates/modal.twig
+++ b/source/templates/modal.twig
@@ -7,16 +7,16 @@
           <legend class="basket-button__title">Выберите размер:</legend>
           <ul class="basket-button__list">
             <li class="basket-button__item  button-size">
+              <input class="button-size__control visually-hidden" type="radio" name="basket-size" value="size-s" id="basket-button--size_s" checked/>
               <label class="button-size__label button-size__label--current" for="basket-button--size_s">s</label>
-              <input class="button-size__control visually-hidden" type="radio" name="basket-size" value="size-s" id="basket-button--size_s" checked>
             </li>
             <li class="basket-button__item basket-button__item--size_m button-size">
+              <input class="button-size__control visually-hidden" type="radio" name="basket-size" value="size-m" id="basket-button--size_m"/>
               <label class="button-size__label" for="basket-button--size_m">m</label>
-              <input class="button-size__control visually-hidden" type="radio" name="basket-size" value="size-m" id="basket-button--size_m">
             </li>
             <li class="basket-button__item button-size">
+              <input class="button-size__control visually-hidden" type="radio" name="basket-size" value="size-l" id="basket-button--size_l"/>
               <label class="button-size__label" for="basket-button--size_l">l</label>
-              <input class="button-size__control visually-hidden" type="radio" name="basket-size" value="size-l" id="basket-button--size_l">
             </li>
           </ul>
         </fieldset>
