--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -11,8 +11,8 @@
 
 
   @media (--not-mobile) {
-    flex-direction: row;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
     padding: 51px 0 58px;
   }
 }
@@ -47,5 +47,18 @@
   @media (--not-mobile) {
     display: block;
     height: 34px;
+    justify-self: start;
+  }
+}
+
+.main-footer__social {
+  @media (--not-mobile) {
+    justify-self: center;
+  }
+}
+
+.main-footer__copyright {
+  @media (--not-mobile) {
+    justify-self: end;
   }
 }
