--- a/source/templates/modal.twig
+++ b/source/templates/modal.twig
@@ -8,7 +8,7 @@
           <ul class="basket-button__list">
             <li class="basket-button__item  button-size">
               <input class="button-size__control visually-hidden" type="radio" name="basket-size" value="size-s" id="basket-button--size_s" checked/>
-              <label class="button-size__label button-size__label--current" for="basket-button--size_s">s</label>
+              <label class="button-size__label" for="basket-button--size_s">s</label>
             </li>
             <li class="basket-button__item basket-button__item--size_m button-size">
               <input class="button-size__control visually-hidden" type="radio" name="basket-size" value="size-m" id="basket-button--size_m"/>
