--- a/source/sass/blocks/products-list.scss
+++ b/source/sass/blocks/products-list.scss
@@ -11,11 +11,19 @@
 }
 
 .products-list__item {
+
+  width: auto;
+}
+
+.products-list__link {
   font-size: 19px;
   line-height: 24px;
   font-weight: 700;
+  color: #ffffff;
+  text-decoration: none;
   padding: 24px 36px 31px 30px;
-  min-width: 320px;
+  display: block;
+  box-sizing: border-box;
 
   &--icon_interior {
     background: var(--accent-color, #63d1bb);
@@ -24,9 +32,4 @@
   &--icon_toy {
     background: var(--accent-color-dark, #56c3b2);
   }
-}
-
-.products-list__link {
-  color: #ffffff;
-  text-decoration: none;
 }
