--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -12,18 +12,12 @@
   list-style-type: none;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 29px;
   row-gap: 20px;
   padding: 0;
   margin: 0;
 }
 
-.social__item {
-  margin-right: 29px;
-
-  &:nth-child(3n) {
-    margin-right: 0;
-  }
-}
 
 .social__link {
   background-repeat: no-repeat;
