--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -3,12 +3,16 @@
   background-color: var(--main-color, #ffffff);
   background-repeat: no-repeat;
   object-fit: contain;
-  background-position: center;
-  padding-top: 90px;
+  background-position: top;
+  padding-top: 73px;
   box-sizing: border-box;
   min-width: 320px;
 }
 
+.products__title {
+  margin-bottom: 120px;
+  margin-top: 0;
+}
 
 .products-list {
   margin: 0;
