--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -16,7 +16,7 @@
   {% include "./footer.twig" %}
 
   {% include "./modal.twig" %}
-  <script src="script.js"></script>
+  <script src="./js/script.min.js"></script>
 </body>
 
 </html>
