--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -30,6 +30,7 @@
 @import "./blocks/author.scss";
 @import "./blocks/author-id.scss";
 @import "./blocks/contacts.scss";
+@import "./blocks/address.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/social.scss";
 @import "./blocks/copyright.scss";
