--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ pages[pageId].name }} | Мишка | HTML Academy</title>
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body class="page__body">
@@ -16,7 +16,7 @@
   {% include "./footer.twig" %}
 
   {% include "./modal.twig" %}
-  <script src="./js/script.min.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
