--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -8,7 +8,7 @@
 
   @media (--not-mobile) {
     display: grid;
-    grid-template-columns: 50px 1fr 1fr 1fr 1fr 50px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto;
   }
 
@@ -24,16 +24,24 @@
 .contacts__title {
   margin: 0;
   margin-bottom: 28px;
+  margin-left: 30px;
+  text-align: start;
+  justify-self: start;
 
   @media (--not-mobile) {
-    grid-column: 2 / 6;
+    grid-column: 1 / 5;
     grid-row: 1 / 2;
+    margin-left: 50px;
+    margin-bottom: 50px;
   }
 
 
   @media (--desktop) {
     grid-column: 2 / 4;
     grid-row: 1 / 2;
+    margin-top: 85px;
+    margin-bottom: 35px;
+    margin-left: 0;
   }
 }
 
@@ -41,13 +49,14 @@
   margin-bottom: 52px;
 
   @media (--not-mobile) {
-    grid-column: 2 / 6;
+    grid-column: 1 / 5;
     grid-row: 2 / 3;
   }
 
   @media (--desktop) {
     grid-column: 2 / 4;
     grid-row: 2 / 3;
+    margin-bottom: 84.5px;
   }
 }
 
@@ -68,12 +77,13 @@
   margin-bottom: 39px;
 
   @media (--not-mobile) {
-    grid-column: 3 / 5;
+    grid-column: 2 / 4;
     grid-row: 4 / 5;
   }
 
   @media (--desktop) {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
+    margin-right: 119px;
   }
 }
