--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -20,7 +20,10 @@
     padding: 0;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto 1fr;
+    padding-top: 78px;
+    padding-bottom: 132px;
+    position: relative;
   }
 
   @media (--desktop) {
@@ -37,6 +40,7 @@
   @media (--not-mobile) {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
+    margin-bottom: 38.5px;
   }
 }
 
@@ -46,14 +50,20 @@
 
   @media (--not-mobile) {
     grid-column: 1 / -1;
-    grid-row: 2 / -1;
+    grid-row: 2 / 3;
   }
+}
+
+
+.reviews__buttons {
+  margin: 0;
 }
 
 .reviews__slider {
   @media (--not-mobile) {
-    grid-column: 4 / 5;
-    grid-row: 3 / 4;
+    position: absolute;
+    bottom: 150px;
+    right: 0;
   }
 }
 
@@ -61,5 +71,7 @@
   @media (--not-mobile) {
     grid-column: 4 / 5;
     grid-row: 1 / 2;
+    max-height: 52px;
+    margin-left: auto;
   }
 }
