--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   min-width: 320px;
+  padding-top: 38px;
 
   @media (--not-mobile) {
     display: grid;
