--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,14 +1,20 @@
 .reviews {
+  position: relative;
+
+
   @media (--not-mobile) {
     background: url("../../img/review-mobile.jpg");
     background-position: top left;
     background-repeat: no-repeat;
-    z-index: -1;
+    background-size: 350px 457px;
+    height: 457px;
+    padding-bottom: 85px;
   }
 
   @media (--desktop) {
     margin-inline: auto;
     max-width: 1050px;
+    padding-bottom: 67px;
   }
 }
 
@@ -16,13 +22,17 @@
   min-width: 260px;
   max-width: 1050px;
 
+  @media (--mobile) {
+    padding-bottom: 45px;
+  }
+
   @media (--not-mobile) {
     padding: 0;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
     padding-top: 78px;
-    padding-bottom: 132px;
+    padding-bottom: 47px;
     position: relative;
   }
 
@@ -38,8 +48,7 @@
   text-align: start;
 
   @media (--not-mobile) {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
+    grid-area: 1 / 1 / 2 / 2;
     margin-bottom: 38.5px;
   }
 }
@@ -49,8 +58,8 @@
   margin-bottom: 30px;
 
   @media (--not-mobile) {
-    grid-column: 1 / -1;
-    grid-row: 2 / 3;
+    grid-area: 2 / 1 / 4 / -1;
+    margin-bottom: 0;
   }
 }
 
@@ -61,16 +70,14 @@
 
 .reviews__slider {
   @media (--not-mobile) {
-    position: absolute;
-    bottom: 150px;
-    right: 0;
+    grid-area: 3 / 2 / 4 / -1;
+    position: relative;
   }
 }
 
 .reviews__write {
   @media (--not-mobile) {
-    grid-column: 4 / 5;
-    grid-row: 1 / 2;
+    grid-area: 1 / 2 / 2 / -1;
     max-height: 52px;
     margin-left: auto;
   }
