--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,7 @@
 @import "./blocks/advantage.scss";
 @import "./blocks/about.scss";
 @import "./blocks/reviews.scss";
+@import "./blocks/slider-reviews.scss";
 @import "./blocks/quote.scss";
 @import "./blocks/button-reviews.scss";
 @import "./blocks/author.scss";
